--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,17 @@ body {
   padding-top: 50px;
   background-color: lightsteelblue;
 }
+
+.fgroup {
+  text-align: center;
+  margin: 10px;
+}
+.ok {
+  text-align: center;
+}
+
+footer {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+}
