--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,28 +1,22 @@
 body {
   padding-top: 50px;
-  background-color: lightsteelblue;
+  background-color: #4A849F;
 }
 
-
+.container{
+  padding: 0px 380px 0px 380px;
+}
 h1 {
   text-align: center;
 }
-.fgroup {
-  text-align: center;
-  margin: 10px;
-}
-.ok {
-  text-align: center;
-}
-.labell {
-  text-align: right;
-}
-.field {
-  text-align: left;
+
+.btn{
+  color: #F2845C;
+  background-color: #1B3440;
 }
 input[type="submit" i]{
   padding: 2px 40px;
-  color: white;
+
 }
 
 footer {
