--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,30 @@
 body {
-  padding-top: 50px;
+  padding-top: 40px;
   background-color: #4A849F;
 }
-
-.container{
-  padding: 0px 380px 0px 380px;
+nav{
+  margin-left: 20px;
 }
+
 h1 {
   text-align: center;
 }
 
-.btn{
-  color: #F2845C;
-  background-color: #1B3440;
-}
 input[type="submit" i]{
   padding: 2px 40px;
-
 }
 
 footer {
   position: absolute;
   left: 50%;
   bottom: 0;
+}
+
+.container{
+  padding-left: 10%;
+  padding-right: 10%;
+}
+.btn{
+  color: #F2845C;
+  background-color: #1B3440;
 }
