--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,14 @@ h1 {
   text-align: center;
 }
 
+#guthaben {
+  font-size: 5em;
+  text-align: center;
+}
+
+.schrift {
+  font-size: 1.5em;
+}
 div {
   padding: 10px;
 }
