--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@ body {
   margin: 0 0 150px;
   padding-top: 40px;
   background-color: #4A849F;
+  font-family: 'Nunito', sans-serif;
 }
 
 .container{
@@ -20,6 +21,7 @@ body {
 }
 h1 {
   text-align: center;
+  font-size: 5em;
 }
 
 nav{
@@ -32,6 +34,7 @@ div {
 }
 .schrift {
   font-size: 1.5em;
+
 }
 a {
   color: #1B3440;
@@ -48,6 +51,7 @@ input[type="submit" i]{
 #guthaben {
   font-size: 5em;
   text-align: center;
+  color: #F2845C;
 }
 
 /*BUTTONS & MESSAGES*/
