--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,82 +1,128 @@
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin: 0 0 150px;
-  padding-top: 40px;
-  background-color: #4A849F;
-  font-family: 'Nunito', sans-serif;
+    margin: 0 0 150px;
+    padding-top: 40px;
+    background-color: #4A849F;
+    font-family: 'Nunito', sans-serif;
 }
 
-.container{
-  padding-left: 10%;
-  padding-right: 10%;
+.container {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+label {
+    font-size: 1.3em;
 }
 
 /*HEADER*/
-#logo{
-  text-align: center;
-}
-h1 {
-  text-align: center;
-  font-size: 5em;
+#logo {
+    text-align: center;
 }
 
-nav{
-  margin-left: 20px;
+h1 {
+    text-align: center;
+    font-size: 5em;
+}
+
+nav {
+    margin-left: 20px;
 }
 
 /*GENERAL*/
+
 div {
-  padding: 10px;
+    padding: 10px;
 }
+
+#radios {
+    margin-top: 2em;
+    text-align: center;
+}
+
+#wertInput {
+    width: 40%;
+    margin-right: 1em;
+    float: left;
+}
+
+#statusForm {
+    width: 30%;
+    float: left;
+    margin-left: 1em;
+}
+
+#add {
+    margin-right: 1em;
+    height: 2.4em;
+    float: right;
+}
+
 .schrift {
-  font-size: 1.5em;
+    font-size: 1.5em;
 
 }
+
 a {
-  color: #1B3440;
-  text-decoration-line: underline;
+    color: #1B3440;
+    text-decoration-line: underline;
 }
 
+.abstand {
+    margin-left: 3%;
+}
 
-.abstand{
-  margin-left: 3%;
+input[type="submit" i] {
+    padding: 2px 40px;
 }
-input[type="submit" i]{
-  padding: 2px 40px;
-}
+
 #guthaben {
-  font-size: 5em;
-  text-align: center;
-  color: #F2845C;
+    font-size: 5em;
+    text-align: center;
+}
+
+#guthabenWert {
+    color: #F2845C;
+    text-shadow: 2px 2px 5px black;
+}
+
+#tagesguthaben {
+    font-size: 2.5em;
+    text-align: center;
+}
+
+#tagesguthabenWert {
+    color: #F2845C;
+    text-shadow: 2px 2px 5px black;
 }
 
 /*BUTTONS & MESSAGES*/
-.btn-normal{
-  color: #F2845C;
-  background-color: #1B3440;
+.btn-normal {
+    color: #F2845C;
+    background-color: #1B3440;
 }
 
-#deleteButton{
-  float: right;
+#deleteButton {
+    float: right;
 }
 
 .validation-error {
-  border: 1px solid #FF0000!important;
-}
-.validation-success {
-  border: 1px solid #00FF00;
+    border: 1px solid #FF0000 !important;
 }
 
+.validation-success {
+    border: 1px solid #00FF00;
+}
 
 footer {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 20px;
-  text-align: center;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    text-align: center;
 }
